--- a/TODO.txt
+++ b/TODO.txt
@@ -13,3 +13,7 @@
 //! 7 mettre se qu'on veut dans les pop up
 
 //! 8 Ajouter toutes les actions possible sur une task 
+
+
+afficher les info stocké dans un json de maniere correcte
+Pouvoir les deplacer 
