--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -22,7 +22,7 @@
     },
     "actions": {
         "add_task": "Add task",
-        "category_filter": "Category filter",
+        "category_filter": "Filter by category",
         "complete_task": "Complete task",
         "edit_task": "Edit task",
         "hide_completed_tasks": "Hide completed tasks",
@@ -33,13 +33,24 @@
         "show_completed_tasks": "Show completed tasks",
         "this_week": "This week",
         "uncomplete_task": "Uncomplete task",
-        "user_menu": "User menu"
+        "user_menu": "User menu",
+        "visibility_filter": "Change visibility"
     },
     "category": {
         "help": "Select one or more categories to only display them",
         "all": "All",
         "none": "No category",
         "show_all": "Show all"
+    },
+    "visibility": {
+        "show_completed_tasks": "Show completed tasks",
+        "hide_completed_tasks": "Hide completed tasks",
+        "show_events": "Show events",
+        "hide_events": "Hide events",
+        "show_weekends": "Show weekends",
+        "hide_weekends": "Hide weekends",
+        "collapse_events": "Collapse events",
+        "expand_events": "Expand events"
     },
     "task": {
         "title": "Title",
